<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maier</string>
    <string name="action_settings">Settings</string>
    <string name="welcome1">Welcome to MAIER</string>
    <string name="welcome2">Please enter the number of players below</string>
    <string name="bplayers">OK</string>
    <string name="playername">Enter the name of the player</string>
    <string name="playercount">This will be player no. </string>
    <string name="bsavename">Save this player</string>
    <string name="bstart">OK, we\'re  ready to play!</string>
    <string name="turn">It\'s your turn, </string>
    <string name="bthrowdices">Throw the dices</string>
    <string name="bdoubt">I doubt it!</string>
    <string name="right">Sorry, the last player told the truth!</string>
    <string name="wrong">What a liar!</string>
    <string name="bnextround">Next round!</string>
    <string name="bcourse">View course of this round</string>
    <string name="bend">Quit this game</string>
    <string name="desc">pic of dices</string>
    <string name="action_finish">Quit Game</string>


</resources>
