
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome1" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome2" />
    
	<EditText
        android:id="@+id/numberplayers"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:ems="12"
        android:inputType="number"
        android:text="5" >
        <requestFocus />
    </EditText>
    
	<Button
        android:id="@+id/bplayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bplayers" />

    
</LinearLayout>

