<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcomenames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playername"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:id="@+id/playercounttext"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/playercount" />

        <TextView
            android:id="@+id/playercount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/playercounttext" />
        
    </RelativeLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bplayername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/bsavename" />



</LinearLayout>
